# fzf_browser

./: README.asciidoc  README.md  browser.fnl  client.py  fuzzybrowse  fuzzybrowse_old  fzf-browser-preview.sh  fzf_browser.sh  todo.wiki  zsh_widgets.zsh
client/: Cargo.toml
client/src/: comms.rs  fzf.rs  main.rs
fub/: .gitignore  README.md  mix.exs
fub/lib/: fub.ex
fub/lib/fub/: application.ex  dir_stack.ex  protocol.ex  server.ex  session.ex
fub/lib/fub/source/: filesystem.ex  recent.ex  source.ex
rurt/: Cargo.toml  todo.md  todo.wiki
rurt/src/: action.rs  alt_screen.rs  cache.rs  colour.rs  dir_stack.rs  draw.rs  file_attrs.rs  fuzz.rs  git.rs  git_but_bad.rs  item.rs  lib.rs  line_stop.rs  main.rs  preview.rs  ratui.rs  snapped.rs  store.rs  tui_log.rs  ui.rs  ui_state.rs  walk.rs
rust_client/: .gitignore  Cargo.toml
rust_client/src/: main.rs
server/: .gitignore  start_daemon.fish
server/config/: config.exs
server/lib/fub/: server.ex  session.ex
server/lib/fub/source/: recent.ex
server/test/: fub_test.exs
src/: main.rs
vim/plugin/: fuzzybrowse.vim
