[package]
name = "rurt"
version = "0.1.0"
edition = "2021"
default-run = "browser"

[dependencies]
ansi-to-tui = "7"
anyhow = "1"
arboard = { version = "3", default-features = false }
bat = "0.25"
clap = { version = "4", features = ["derive"] }
content_inspector = "0.2"
convert_case = "0.8"
crossterm = "0.28"
dirs = "6"
file_type = "0.8"
gix = "0.71"
hexyl = "0.16"
ignore = "0.4"
log = { version = "0.4.25", features = ["std"] }
nucleo = "0.5"
open = "5"
pathdiff = "0.2"
ratatui = "0.29"
shell-quote = { default-features = false, version = "0.7", features = ["bash", "fish"] }
tui-input = "0.11"

[dependencies.lscolors]
version = "0.20"
default-features = false
features = ["crossterm"]

[features]
default = ["git_info"]
never = []
git_info = []
log_pane = []
input_bottom = []
